<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/noteCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/noteCardTitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="30dp"
                android:fontFamily="@font/bold"
                android:maxLines="2"
                android:text="@string/note_card_heading_text"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/noteCardSubtitleView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/regular"
                android:text="@string/note_card_subheading_text"
                android:textColor="#BF000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/noteCardDateView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/italic"
                android:gravity="right"
                android:text="@string/note_card_date_text"
                android:textColor="#99000000"
                android:textSize="12sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>