<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_yellow"
    tools:context=".UI.Fragments.FragmentCreateNote">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutCreate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_yellow">

        <EditText
            android:id="@+id/titleCreateTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/bold"
            android:gravity="center_vertical"
            android:hint="@string/title"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="#68000000"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.104" />

        <EditText
            android:id="@+id/subtitleCreateTextView"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/italic"
            android:gravity="center_vertical"
            android:hint="@string/subtitle"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/black"
            android:textColorHint="#68000000"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.448"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.179"
            tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />

        <EditText
            android:id="@+id/contentCreateTextView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/transparent"
            android:ems="10"
            android:fontFamily="@font/regular"
            android:gravity="start"
            android:hint="@string/content"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textColor="@color/black"
            android:textColorHint="#68000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.517"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.792"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck,TextContrastCheck" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayoutDotsCreate"
            android:layout_width="228dp"
            android:layout_height="40dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.023">

            <ImageView
                android:id="@+id/yellowDotCreate"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/yellow_dot"
                android:src="@drawable/yellow_dot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.047"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/pinkDotCreate"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/pink_dot"
                android:src="@drawable/pink_dot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.275"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/greenDotCreate"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/green_dot"
                android:src="@drawable/green_dot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6"
                tools:ignore="ImageContrastCheck" />

            <ImageView
                android:id="@+id/blueDotCreate"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:contentDescription="@string/purple_dot"
                android:src="@drawable/blue_dot"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.738"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.6"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/saveNotesButtonCreate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/save_notes_button_text"
            android:src="@drawable/ic_done"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck,ImageContrastCheck" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>