<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Fragments.FragmentHome">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_grey">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNotesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:contentDescription="@string/add_notes_button_text"
            android:src="@drawable/ic_add"
            app:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.919"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.962"
            tools:ignore="SpeakableTextPresentCheck,RedundantDescriptionCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/notesRecyclerView"
            android:layout_width="407dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            android:background="@color/background_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="400dp"
            android:layout_height="38dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/allButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/regular"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:paddingBottom="2dp"
                android:text="All"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.011"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <TextView
                android:id="@+id/generalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/light_yellow"
                android:fontFamily="@font/regular"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:paddingBottom="2dp"
                android:text="@string/general"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.184"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <TextView
                android:id="@+id/studyButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/light_pink"
                android:fontFamily="@font/regular"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:paddingBottom="2dp"
                android:text="@string/study"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.685"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <TextView
                android:id="@+id/workButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/light_green"
                android:fontFamily="@font/regular"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:paddingBottom="2dp"
                android:text="@string/work"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.453"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />

            <TextView
                android:id="@+id/personalButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/light_blue"
                android:fontFamily="@font/regular"
                android:paddingStart="15dp"
                android:paddingTop="2dp"
                android:paddingEnd="15dp"
                android:paddingBottom="2dp"
                android:text="@string/personal"
                android:textColor="@color/black"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.983"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.125" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>